# data-haskell-examples

./: .travis.yml  data-haskell-examples.cabal  readme.md  stack.yaml
examples/: LinearRegression1.hs  examples.hs
test/: Spec.hs
