name: data-haskell-examples
version: 0.1.0.0
synopsis: Data analysis examples
description: A set of recommended Haskell libraries for data analysis and example usage.
category: project
homepage: https://github.com/DataHaskell/data-haskell-examples
license: BSD3
license-file: LICENSE
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day
build-type: Simple
cabal-version: >=1.14
extra-source-files: stack.yaml
library
  default-language:
    Haskell2010
  ghc-options:
  hs-source-dirs:      

  exposed-modules:

  build-depends:
    base >= 4.7 && < 5
  default-extensions:
    NoImplicitPrelude

test-suite data-haskell-examples-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:
              -funbox-strict-fields
              -- -fforce-recomp
              -- -threaded
              -- -rtsopts
              -with-rtsopts=-N
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
                base >= 4.7 && < 5,
                protolude,
                data-haskell-examples,
                doctest
  default-extensions:
    NoImplicitPrelude

executable data-haskell-examples
  default-language:
    Haskell2010
  ghc-options:
              -funbox-strict-fields
              -- -fforce-recomp
              -- -threaded
              -- -rtsopts
              -with-rtsopts=-N
  hs-source-dirs: examples
  main-is: examples.hs
  build-depends:
                base >= 4.7 && < 5,
                protolude,
                data-haskell-examples,
                vector,
                hmatrix
  default-extensions:
    NoImplicitPrelude

source-repository head
  type:
    git
  location:
    https://github.com/DataHaskell/data-haskell-examples
